# vsort

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  build_script.sh  vsort.c  vsort.h  vsort_logger.c  vsort_logger.h  windows_static_config.cmake
.github/workflows/: apple_silicon_ci.yml  build.yml  windows-toolchain.cmake  windows_build.yml
docs/: index.html
examples/: apple_silicon_test.c  basic_example.c  benchmark.c  char_sorting_example.c  custom_comparator_example.c  float_sorting_example.c  performance_benchmark.c  struct_sorting_example.c
tests/: test_apple_silicon.c  test_basic.c  test_performance.c
